Update README.md with task list and save current progress

--- a/pet-care-guide.html
+++ b/pet-care-guide.html
@@ -7,294 +7,9 @@
     <title>PetLife - 飼い方ガイド</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
-        :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --accent-color: #fb923c;
-            --brown-color: #78350f;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fef3c7;
-        }
-
-        .navbar {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            color: var(--primary-color) !important;
-            font-size: 1.5rem;
-        }
-
-        .nav-link {
-            color: var(--brown-color) !important;
-            font-weight: 500;
-            margin: 0 10px;
-        }
-
-        .nav-link:hover,
-        .nav-link.active {
-            color: var(--primary-color) !important;
-        }
-
-        .page-header {
-            background: linear-gradient(135deg, #dcfce7 0%, #fed7aa 100%);
-            padding: 60px 0;
-            border-radius: 0 0 50px 50px;
-            margin-bottom: 40px;
-        }
-
-        .category-card {
-            background: white;
-            border-radius: 25px;
-            padding: 30px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
-            margin-bottom: 30px;
-            transition: all 0.3s ease;
-            cursor: pointer;
-            border: 3px solid transparent;
-        }
-
-        .category-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-            border-color: var(--primary-color);
-        }
-
-        .category-icon {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 2.5rem;
-            margin: 0 auto 20px;
-        }
-
-        .guide-card {
-            background: white;
-            border-radius: 20px;
-            padding: 25px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
-            margin-bottom: 20px;
-            transition: all 0.3s ease;
-        }
-
-        .guide-card:hover {
-            transform: translateX(10px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.12);
-        }
-
-        .guide-icon {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.5rem;
-            margin-right: 20px;
-            flex-shrink: 0;
-        }
-
-        .accordion-custom .accordion-item {
-            background: white;
-            border: none;
-            border-radius: 20px;
-            margin-bottom: 15px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
-        }
-
-        .accordion-custom .accordion-button {
-            background-color: white;
-            color: var(--brown-color);
-            font-weight: 600;
-            font-size: 1.1rem;
-            padding: 20px 25px;
-            border-radius: 20px;
-        }
-
-        .accordion-custom .accordion-button:not(.collapsed) {
-            background: linear-gradient(135deg, #dcfce7, #fed7aa);
-            color: var(--brown-color);
-            box-shadow: none;
-        }
-
-        .accordion-custom .accordion-button::after {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2378350f'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-        }
-
-        .accordion-custom .accordion-body {
-            padding: 25px;
-            background-color: #fefefe;
-        }
-
-        .step-card {
-            background: white;
-            border-radius: 20px;
-            padding: 25px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
-            margin-bottom: 20px;
-            position: relative;
-            padding-left: 80px;
-        }
-
-        .step-number {
-            position: absolute;
-            left: 20px;
-            top: 20px;
-            width: 50px;
-            height: 50px;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-weight: bold;
-            font-size: 1.5rem;
-        }
-
-        .tip-box {
-            background: linear-gradient(135deg, #dcfce7, #fed7aa);
-            border-radius: 20px;
-            padding: 25px;
-            margin: 20px 0;
-            border-left: 5px solid var(--primary-color);
-        }
-
-        .warning-box {
-            background: #fef3c7;
-            border-radius: 20px;
-            padding: 25px;
-            margin: 20px 0;
-            border-left: 5px solid var(--secondary-color);
-        }
-
-        .checklist {
-            list-style: none;
-            padding: 0;
-        }
-
-        .checklist li {
-            padding: 12px 0;
-            padding-left: 35px;
-            position: relative;
-            border-bottom: 1px solid #f3f4f6;
-        }
-
-        .checklist li:last-child {
-            border-bottom: none;
-        }
-
-        .checklist li::before {
-            content: "✓";
-            position: absolute;
-            left: 0;
-            top: 12px;
-            width: 25px;
-            height: 25px;
-            background: var(--primary-color);
-            color: white;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-        }
-
-        .search-box {
-            background: white;
-            border-radius: 50px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            padding: 8px;
-            margin-bottom: 30px;
-        }
-
-        .search-box input {
-            border: none;
-            padding: 12px 20px;
-            border-radius: 50px;
-            width: 100%;
-        }
-
-        .search-box input:focus {
-            outline: none;
-        }
-
-        .search-box button {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            border: none;
-            color: white;
-            padding: 12px 30px;
-            border-radius: 50px;
-            font-weight: bold;
-        }
-
-        .tag-badge {
-            background: rgba(16, 185, 129, 0.1);
-            color: var(--primary-color);
-            padding: 6px 15px;
-            border-radius: 50px;
-            font-size: 0.85rem;
-            font-weight: 600;
-            display: inline-block;
-            margin: 5px;
-        }
-
-        footer {
-            background-color: var(--brown-color);
-            color: white;
-            padding: 40px 0;
-            margin-top: 80px;
-            border-radius: 50px 50px 0 0;
-        }
-
-        .video-thumbnail {
-            width: 100%;
-            height: 200px;
-            background: #e5e7eb;
-            border-radius: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 3rem;
-            color: var(--primary-color);
-            margin-bottom: 15px;
-        }
-
-        /* レスポンシブ対応 */
-        @media (max-width: 768px) {
-            .step-card {
-                padding-left: 20px;
-                padding-top: 80px;
-            }
-
-            .step-number {
-                left: 50%;
-                transform: translateX(-50%);
-                top: 15px;
-            }
-
-            .category-icon {
-                width: 60px;
-                height: 60px;
-                font-size: 2rem;
-            }
-
-            .guide-icon {
-                width: 40px;
-                height: 40px;
-                font-size: 1.2rem;
-            }
-        }
+        
     </style>
 </head>
 
