--- a/pet-guide-form.html
+++ b/pet-guide-form.html
@@ -7,447 +7,10 @@
     <title>PetLife - 飼育記録を投稿</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
-        :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --accent-color: #fb923c;
-            --brown-color: #78350f;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fef3c7;
-        }
-
-        .navbar {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .navbar-brand {
-            font-weight: bold;
-            color: var(--primary-color) !important;
-            font-size: 1.5rem;
-        }
-
-        .nav-link {
-            color: var(--brown-color) !important;
-            font-weight: 500;
-            margin: 0 10px;
-        }
-
-        .nav-link:hover,
-        .nav-link.active {
-            color: var(--primary-color) !important;
-        }
-
-        .page-header {
-            background: linear-gradient(135deg, #dcfce7 0%, #fed7aa 100%);
-            padding: 60px 0;
-            border-radius: 0 0 50px 50px;
-            margin-bottom: 40px;
-        }
-
-        .form-container {
-            background: white;
-            border-radius: 30px;
-            padding: 40px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
-        }
-
-        .form-section {
-            margin-bottom: 35px;
-            padding-bottom: 35px;
-            border-bottom: 2px solid #f3f4f6;
-        }
-
-        .form-section:last-child {
-            border-bottom: none;
-            margin-bottom: 0;
-            padding-bottom: 0;
-        }
-
-        .section-title {
-            color: var(--brown-color);
-            font-weight: 700;
-            font-size: 1.3rem;
-            margin-bottom: 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .section-title i {
-            color: var(--primary-color);
-        }
-
-        .form-label {
-            font-weight: 600;
-            color: var(--brown-color);
-            margin-bottom: 8px;
-        }
-
-        .required-mark {
-            color: #ef4444;
-            margin-left: 3px;
-        }
-
-        .form-control,
-        .form-select {
-            border: 2px solid #e5e7eb;
-            border-radius: 15px;
-            padding: 12px 18px;
-            transition: all 0.3s ease;
-        }
-
-        .form-control:focus,
-        .form-select:focus {
-            border-color: var(--primary-color);
-            box-shadow: 0 0 0 0.2rem rgba(16, 185, 129, 0.15);
-        }
-
-        .form-control::placeholder {
-            color: #9ca3af;
-        }
-
-        textarea.form-control {
-            min-height: 120px;
-            resize: vertical;
-        }
-
-        .category-options {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
-        }
-
-        .category-option {
-            position: relative;
-        }
-
-        .category-option input[type="radio"] {
-            position: absolute;
-            opacity: 0;
-        }
-
-        .category-label {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            border: 2px solid #e5e7eb;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            background: white;
-            text-align: center;
-        }
-
-        .category-label i {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-        }
-
-        .category-label:hover {
-            border-color: var(--primary-color);
-            background: rgba(16, 185, 129, 0.05);
-        }
-
-        .category-option input[type="radio"]:checked+.category-label {
-            border-color: var(--primary-color);
-            background: linear-gradient(135deg, #dcfce7, #fed7aa);
-            font-weight: 700;
-        }
-
-        .file-upload-area {
-            border: 2px dashed #e5e7eb;
-            border-radius: 20px;
-            padding: 40px;
-            text-align: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            background: #fafafa;
-        }
-
-        .file-upload-area:hover {
-            border-color: var(--primary-color);
-            background: rgba(16, 185, 129, 0.05);
-        }
-
-        .file-upload-area i {
-            font-size: 3rem;
-            color: var(--primary-color);
-            margin-bottom: 15px;
-        }
-
-        .upload-text {
-            color: var(--brown-color);
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
-
-        .upload-hint {
-            color: #9ca3af;
-            font-size: 0.9rem;
-        }
-
-        .image-preview-container {
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-
-        .image-preview {
-            position: relative;
-            width: 120px;
-            height: 120px;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .image-preview img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .image-preview .remove-btn {
-            position: absolute;
-            top: 5px;
-            right: 5px;
-            background: rgba(239, 68, 68, 0.9);
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .image-preview .remove-btn:hover {
-            background: #dc2626;
-        }
-
-        .date-input-group {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-        }
-
-        .date-input-group input {
-            flex: 1;
-        }
-
-        .quick-date-btn {
-            padding: 10px 20px;
-            border: 2px solid var(--primary-color);
-            background: white;
-            color: var(--primary-color);
-            border-radius: 50px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            white-space: nowrap;
-        }
-
-        .quick-date-btn:hover {
-            background: var(--primary-color);
-            color: white;
-        }
-
-        .btn-submit {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            border: none;
-            color: white;
-            padding: 15px 50px;
-            border-radius: 50px;
-            font-weight: bold;
-            font-size: 1.2rem;
-            transition: all 0.3s ease;
-        }
-
-        .btn-submit:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 25px rgba(16, 185, 129, 0.3);
-        }
-
-        .btn-draft {
-            background: white;
-            border: 2px solid var(--primary-color);
-            color: var(--primary-color);
-            padding: 15px 50px;
-            border-radius: 50px;
-            font-weight: bold;
-            font-size: 1.2rem;
-            transition: all 0.3s ease;
-        }
-
-        .btn-draft:hover {
-            background: rgba(16, 185, 129, 0.1);
-        }
-
-        .help-text {
-            color: #6b7280;
-            font-size: 0.9rem;
-            margin-top: 5px;
-        }
-
-        .info-card {
-            background: linear-gradient(135deg, #dcfce7, #fed7aa);
-            border-radius: 20px;
-            padding: 25px;
-            margin-bottom: 30px;
-        }
-
-        .info-card-title {
-            font-weight: 700;
-            color: var(--brown-color);
-            margin-bottom: 15px;
-            font-size: 1.1rem;
-        }
-
-        .info-card ul {
-            margin-bottom: 0;
-            padding-left: 20px;
-        }
-
-        .info-card li {
-            color: var(--brown-color);
-            margin-bottom: 8px;
-        }
-
-        footer {
-            background-color: var(--brown-color);
-            color: white;
-            padding: 40px 0;
-            margin-top: 80px;
-            border-radius: 50px 50px 0 0;
-        }
-
-        /* Toast通知スタイル */
-        .toast-container {
-            position: fixed;
-            top: 80px;
-            right: 20px;
-            z-index: 9999;
-        }
-
-        .toast-custom {
-            background: white;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            border: none;
-            min-width: 350px;
-        }
-
-        .toast-custom .toast-header {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            border-radius: 20px 20px 0 0;
-            border: none;
-            padding: 15px 20px;
-        }
-
-        .toast-custom .toast-body {
-            padding: 20px;
-            color: var(--brown-color);
-        }
-
-        .mood-selector {
-            display: flex;
-            gap: 15px;
-            justify-content: center;
-        }
-
-        .mood-option {
-            cursor: pointer;
-            font-size: 2.5rem;
-            opacity: 0.3;
-            transition: all 0.3s ease;
-        }
-
-        .mood-option:hover,
-        .mood-option.active {
-            opacity: 1;
-            transform: scale(1.2);
-        }
-
-        .tag-input-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-            padding: 10px;
-            border: 2px solid #e5e7eb;
-            border-radius: 15px;
-            min-height: 50px;
-        }
-
-        .tag-item {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 6px 15px;
-            border-radius: 50px;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            font-size: 0.9rem;
-            font-weight: 600;
-        }
-
-        .tag-item .remove-tag {
-            cursor: pointer;
-            background: rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.8rem;
-        }
-
-        .tag-item .remove-tag:hover {
-            background: rgba(255, 255, 255, 0.5);
-        }
-
-        .tag-input-field {
-            flex: 1;
-            border: none;
-            outline: none;
-            min-width: 100px;
-            padding: 5px;
-        }
-
-        .suggested-tags {
-            display: flex;
-            gap: 8px;
-            flex-wrap: wrap;
-            margin-top: 10px;
-        }
-
-        .suggested-tag {
-            background: white;
-            border: 2px solid #e5e7eb;
-            color: var(--brown-color);
-            padding: 5px 12px;
-            border-radius: 50px;
-            font-size: 0.85rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .suggested-tag:hover {
-            border-color: var(--primary-color);
-            background: rgba(16, 185, 129, 0.1);
-        }
+        
+        
     </style>
 </head>
 
