--- a/pet-guide-list.html
+++ b/pet-guide-list.html
@@ -6,6 +6,7 @@
     <title>ペット図鑑 - PetLife</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         :root {
             --primary-color: #10b981;
