Initialize sneaker theme: Rename files, update index content, and fix links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetLife - ペット情報・飼い方ガイド</title>
+    <title>Home - KicksLog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="bi bi-heart-fill text-danger"></i> PetLife
+                <i class="bi bi-heart-fill text-danger"></i> KicksLog
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -27,16 +27,16 @@
                         <a class="nav-link active" href="#">ホーム</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pet-guide-list.html">ペット図鑑</a>
+                        <a class="nav-link" href="sneaker-list.html">ペット図鑑</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pet-care-guide.html">飼い方ガイド</a>
+                        <a class="nav-link" href="care-guide.html">飼い方ガイド</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pet-guide-qa.html">Q&A</a>
+                        <a class="nav-link" href="sneaker-faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pet-guide-record.html">飼育記録</a>
+                        <a class="nav-link" href="coordinate-log.html">コーデ記録数</a>
                     </li>
                 </ul>
                 <button class="btn btn-outline-success ms-3 rounded-pill fw-bold">
@@ -52,24 +52,22 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
                     <h1 class="display-3 fw-bold mb-4" style="color: var(--brown-color);">
-                        あなたにぴったりの<br>
-                        ペットを見つけよう
+                        あなただけの最高の一足を<br>見つけよう
                     </h1>
                     <p class="lead mb-4" style="color: #78350f;">
-                        ペットとの幸せな暮らしをサポートする情報サイト。<br>
-                        飼い方、健康管理、しつけまで詳しく解説！
+                        スニーカーライフをより充実させるための情報サイト。<br>新作情報、メンテナンス方法、コーディネート記録まで網羅！
                     </p>
                     <div class="d-flex gap-3">
                         <button class="btn btn-primary-custom">
-                            <i class="bi bi-search"></i> ペットを探す
+                            <i class="bi bi-search"></i> コレクションを見る
                         </button>
                         <button class="btn btn-outline-dark rounded-pill px-4 py-3 fw-bold">
-                            <i class="bi bi-book"></i> 飼い方を学ぶ
+                            <i class="bi bi-book"></i> 手入れ方法を知る
                         </button>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="https://placehold.co/500x400/10b981/ffffff?text=Happy+Pets" class="hero-image" alt="ペットイラスト">
+                    <img src="https://placehold.co/500x400/10b981/ffffff?text=Nice+Kicks" class="hero-image" alt="ペットイラスト">
                 </div>
             </div>
         </div>
@@ -81,35 +79,35 @@
             <div class="col-md-3">
                 <div class="stats-box">
                     <div class="stats-number">500+</div>
-                    <p class="text-muted mb-0">掲載ペット種類</p>
+                    <p class="text-muted mb-0">掲載モデル数</p>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="stats-box">
                     <div class="stats-number">10,000+</div>
-                    <p class="text-muted mb-0">飼育記録</p>
+                    <p class="text-muted mb-0">コーデ記録数</p>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="stats-box">
                     <div class="stats-number">3,000+</div>
-                    <p class="text-muted mb-0">Q&A投稿</p>
+                    <p class="text-muted mb-0">レビュー数</p>
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="stats-box">
                     <div class="stats-number">50,000+</div>
-                    <p class="text-muted mb-0">ユーザー数</p>
+                    <p class="text-muted mb-0">スニーカーヘッズ</p>
                 </div>
             </div>
         </div>
 
-        <!-- 人気のペット -->
+        <!-- 今月のPick Up -->
         <section class="mb-5">
             <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
-                <i class="bi bi-star-fill text-warning"></i> 人気のペット
+                <i class="bi bi-star-fill text-warning"></i> 今月のPick Up
             </h2>
-            <p class="text-center text-muted mb-5">多くの方に選ばれているペットたち</p>
+            <p class="text-center text-muted mb-5">今話題の注目スニーカーをご紹介</p>
 
             <div class="row g-4">
                 <div class="col-md-4">
@@ -118,14 +116,14 @@
                             <i class="bi bi-emoji-smile"></i>
                         </div>
                         <div class="text-center">
-                            <span class="category-badge">犬</span>
-                            <h4 class="fw-bold mb-3">柴犬</h4>
+                            <span class="category-badge">NIKE</span>
+                            <h4 class="fw-bold mb-3">Air Jordan 1 High</h4>
                             <p class="text-muted mb-4">
-                                日本原産の愛らしい犬種。忠実で賢く、家族思いの性格が魅力です。
+                                スニーカーカルチャーの象徴。伝説の始まりとも言える不朽の名作。
                             </p>
                             <div class="d-flex justify-content-around mb-3">
                                 <div>
-                                    <small class="text-muted d-block">飼いやすさ</small>
+                                    <small class="text-muted d-block">レア度</small>
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                                 <div>
@@ -146,14 +144,14 @@
                             <i class="bi bi-emoji-heart-eyes"></i>
                         </div>
                         <div class="text-center">
-                            <span class="category-badge" style="background: #fb923c;">猫</span>
-                            <h4 class="fw-bold mb-3">アメリカンショートヘア</h4>
+                            <span class="category-badge" style="background: #fb923c;">ADIDAS</span>
+                            <h4 class="fw-bold mb-3">Adidas Samba OG</h4>
                             <p class="text-muted mb-4">
-                                人懐っこく遊び好きな性格。初心者にもおすすめの猫種です。
+                                クラシックなデザインが再評価され、ストリートで大ブレイク中。
                             </p>
                             <div class="d-flex justify-content-around mb-3">
                                 <div>
-                                    <small class="text-muted d-block">飼いやすさ</small>
+                                    <small class="text-muted d-block">レア度</small>
                                     <div class="text-warning">★★★★★</div>
                                 </div>
                                 <div>
@@ -174,14 +172,14 @@
                             <i class="bi bi-droplet-fill"></i>
                         </div>
                         <div class="text-center">
-                            <span class="category-badge" style="background: #06b6d4;">小動物</span>
-                            <h4 class="fw-bold mb-3">ハムスター</h4>
+                            <span class="category-badge" style="background: #06b6d4;">New Balance</span>
+                            <h4 class="fw-bold mb-3">New Balance 990v6</h4>
                             <p class="text-muted mb-4">
-                                小さくて可愛らしいペット。省スペースで飼育できるのが魅力。
+                                「1000点満点で990点」のキャッチコピー通りの最高の履き心地。
                             </p>
                             <div class="d-flex justify-content-around mb-3">
                                 <div>
-                                    <small class="text-muted d-block">飼いやすさ</small>
+                                    <small class="text-muted d-block">レア度</small>
                                     <div class="text-warning">★★★★★</div>
                                 </div>
                                 <div>
@@ -202,14 +200,14 @@
                             <i class="bi bi-feather"></i>
                         </div>
                         <div class="text-center">
-                            <span class="category-badge" style="background: #8b5cf6;">鳥類</span>
-                            <h4 class="fw-bold mb-3">セキセイインコ</h4>
+                            <span class="category-badge" style="background: #8b5cf6;">NIKE</span>
+                            <h4 class="fw-bold mb-3">Air Force 1 '07</h4>
                             <p class="text-muted mb-4">
-                                おしゃべり好きで人懐っこい小鳥。カラフルな羽が美しい。
+                                誰もが一度は履いたことがある王道の白スニーカー。
                             </p>
                             <div class="d-flex justify-content-around mb-3">
                                 <div>
-                                    <small class="text-muted d-block">飼いやすさ</small>
+                                    <small class="text-muted d-block">レア度</small>
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                                 <div>
@@ -230,14 +228,14 @@
                             <i class="bi bi-water"></i>
                         </div>
                         <div class="text-center">
-                            <span class="category-badge" style="background: #14b8a6;">爬虫類</span>
-                            <h4 class="fw-bold mb-3">ヒョウモントカゲモドキ</h4>
+                            <span class="category-badge" style="background: #14b8a6;">ADIDAS</span>
+                            <h4 class="fw-bold mb-3">Yeezy Boost 350 V2</h4>
                             <p class="text-muted mb-4">
-                                飼育しやすい爬虫類として人気。穏やかな性格で可愛らしい。
+                                革命的なクッション性と独創的なデザイン。
                             </p>
                             <div class="d-flex justify-content-around mb-3">
                                 <div>
-                                    <small class="text-muted d-block">飼いやすさ</small>
+                                    <small class="text-muted d-block">レア度</small>
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                                 <div>
@@ -258,14 +256,14 @@
                             <i class="bi bi-diagram-3-fill"></i>
                         </div>
                         <div class="text-center">
-                            <span class="category-badge" style="background: #3b82f6;">魚類</span>
-                            <h4 class="fw-bold mb-3">金魚</h4>
+                            <span class="category-badge" style="background: #3b82f6;">VANS</span>
+                            <h4 class="fw-bold mb-3">Vans Old Skool</h4>
                             <p class="text-muted mb-4">
-                                日本の伝統的な観賞魚。優雅な泳ぎと美しい姿が魅力的。
+                                スケーターだけでなく、幅広い層に愛される定番モデル。
                             </p>
                             <div class="d-flex justify-content-around mb-3">
                                 <div>
-                                    <small class="text-muted d-block">飼いやすさ</small>
+                                    <small class="text-muted d-block">レア度</small>
                                     <div class="text-warning">★★★★☆</div>
                                 </div>
                                 <div>
@@ -285,7 +283,7 @@
         <!-- サービス特徴 -->
         <section class="mb-5">
             <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
-                <i class="bi bi-check-circle-fill text-success"></i> PetLifeの特徴
+                <i class="bi bi-check-circle-fill text-success"></i> KicksLogの特徴
             </h2>
             <p class="text-center text-muted mb-5">ペットライフを全力でサポート</p>
 
@@ -295,9 +293,9 @@
                         <div class="feature-icon">
                             <i class="bi bi-book"></i>
                         </div>
-                        <h4 class="fw-bold mb-3">詳しい飼育ガイド</h4>
+                        <h4 class="fw-bold mb-3">メンテナンスガイド</h4>
                         <p class="text-muted">
-                            初心者にもわかりやすい飼育方法や健康管理の情報を豊富に掲載しています。
+                            加水分解対策や黄ばみ落としなど、長く履くためのケア方法を解説。
                         </p>
                     </div>
                 </div>
@@ -306,9 +304,9 @@
                         <div class="feature-icon">
                             <i class="bi bi-chat-dots"></i>
                         </div>
-                        <h4 class="fw-bold mb-3">Q&Aコミュニティ</h4>
+                        <h4 class="fw-bold mb-3">スニーカーFAQ</h4>
                         <p class="text-muted">
-                            経験豊富な飼い主さんたちがあなたの疑問に答えてくれます。
+                            サイズ感や偽物の見分け方など、よくある疑問を解決します。
                         </p>
                     </div>
                 </div>
@@ -317,21 +315,21 @@
                         <div class="feature-icon">
                             <i class="bi bi-journal-text"></i>
                         </div>
-                        <h4 class="fw-bold mb-3">飼育記録管理</h4>
+                        <h4 class="fw-bold mb-3">コーデ記録数管理</h4>
                         <p class="text-muted">
-                            ペットの成長や健康状態を記録して、大切な思い出を残せます。
+                            その日のコーディネートと足元を写真で記録して振り返れます。
                         </p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- カテゴリから探す -->
+        <!-- ブランドから探す -->
         <section class="mb-5">
             <h2 class="text-center fw-bold section-title" style="color: var(--brown-color);">
-                <i class="bi bi-grid-3x3-gap-fill"></i> カテゴリから探す
+                <i class="bi bi-grid-3x3-gap-fill"></i> ブランドから探す
             </h2>
-            <p class="text-center text-muted mb-5">好みのペットカテゴリを選択</p>
+            <p class="text-center text-muted mb-5">お気に入りのブランドをチェック</p>
 
             <div class="row g-3">
                 <div class="col-6 col-md-3">
@@ -340,8 +338,8 @@
                             <div class="feature-icon" style="background: rgba(251, 146, 60, 0.1); color: var(--secondary-color);">
                                 <i class="bi bi-heart-fill"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">犬</h5>
-                            <small class="text-muted">120種類</small>
+                            <h5 class="fw-bold" style="color: var(--brown-color);">NIKE</h5>
+                            <small class="text-muted">120 Models</small>
                         </div>
                     </a>
                 </div>
@@ -351,8 +349,8 @@
                             <div class="feature-icon" style="background: rgba(251, 146, 60, 0.1); color: #fb923c;">
                                 <i class="bi bi-balloon-heart"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">猫</h5>
-                            <small class="text-muted">80種類</small>
+                            <h5 class="fw-bold" style="color: var(--brown-color);">ADIDAS</h5>
+                            <small class="text-muted">80 Models</small>
                         </div>
                     </a>
                 </div>
@@ -362,8 +360,8 @@
                             <div class="feature-icon" style="background: rgba(6, 182, 212, 0.1); color: #06b6d4;">
                                 <i class="bi bi-brightness-alt-high"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">小動物</h5>
-                            <small class="text-muted">45種類</small>
+                            <h5 class="fw-bold" style="color: var(--brown-color);">New Balance</h5>
+                            <small class="text-muted">45 Models</small>
                         </div>
                     </a>
                 </div>
@@ -373,8 +371,8 @@
                             <div class="feature-icon" style="background: rgba(139, 92, 246, 0.1); color: #8b5cf6;">
                                 <i class="bi bi-cloud"></i>
                             </div>
-                            <h5 class="fw-bold" style="color: var(--brown-color);">鳥類</h5>
-                            <small class="text-muted">35種類</small>
+                            <h5 class="fw-bold" style="color: var(--brown-color);">VANS</h5>
+                            <small class="text-muted">35 Models</small>
                         </div>
                     </a>
                 </div>
@@ -388,9 +386,9 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">
-                        <i class="bi bi-heart-fill text-danger"></i> PetLife
+                        <i class="bi bi-heart-fill text-danger"></i> KicksLog
                     </h5>
-                    <p>ペットとの幸せな暮らしを応援する情報サイト</p>
+                    <p>スニーカーライフをより楽しくする情報サイト</p>
                 </div>
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サイト情報</h6>
@@ -404,7 +402,7 @@
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
                         <li><a href="#" class="text-white text-decoration-none">ヘルプ</a></li>
-                        <li><a href="#" class="text-white text-decoration-none">お問い合わせ</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">Contact</a></li>
                         <li><a href="#" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
@@ -419,10 +417,13 @@
                 </div>
             </div>
             <hr class="border-light">
-            <p class="text-center mb-0">&copy; 2024 PetLife. All rights reserved.</p>
+            <p class="text-center mb-0">&copy; 2024 KicksLog. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
+
